# src/routes/project/project.controller.ts
@@ -441,14 +441,14 @@ export class ProjectController {
   @ApiResponse({
     status: 200,
     description: "Project object",
-    type: ProjectResponseDto
+    type: ProjectExResponseDto
   })
   @ApiResponse({ status: 404, description: "Project not found" })
   @ApiResponse({ status: 500, description: "Internal server error" })
   @ApiResponse({ status: 403, description: "Invalid user or project ID" })
   async findOne(
     @Param("id", ParseIntPipe) id: number
-  ): Promise<ProjectResponseDto> {
+  ): Promise<ProjectExResponseDto> {
     return this.projectService.findOne(id);
   }
 
